k8s-tutorial-app/k8s/cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-tut
  labels:
    name: k8s-tut
